@@ -36,4 +36,4 @@ is_deeply $header->as_arrayref, [
     'Content-Type',        'text/plain; charset=utf-8',
 ];
 
-is $header->as_string, $header->query->header( $header->header );
+is $header->as_string, $header->finalize;
